--- a/loxtite/lib/dune
+++ b/loxtite/lib/dune
@@ -3,19 +3,14 @@
  (name loxtite)
  (libraries llvm)
  (preprocess
-  (pps ppx_deriving.show)))
+  (pps ppx_deriving.show))
+ (modules ast lexer parser compiler))
 
 (rule
  (targets lexer.ml)
  (deps lexer.mll)
  (action
   (run ocamllex %{deps})))
-
-; (rule
-;  (targets parser.ml parser.mli)
-;  (deps parser.mly)
-;  (action
-;   (run menhir --infer --base parser %{deps})))
 
 (menhir
  (modules parser))
